--- a/.github/workflows/build-and-push-to-registry.yml
+++ b/.github/workflows/build-and-push-to-registry.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout the repo 
         uses: actions/checkout@v2
