--- a/.github/workflows/build-and-push-to-registry.yml
+++ b/.github/workflows/build-and-push-to-registry.yml
@@ -28,9 +28,7 @@ jobs:
         run: doctl registry login --expiry-seconds 600
       - name: Tag image 
         run:
-          docker tag ${{ env.IMAGE }} \
-          ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_VERSION }}
+          docker tag ${{ env.IMAGE }} ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_VERSION }}
       - name: Push image to DO Container Registry 
         run: 
-          docker push \
-          ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_VERSION }}
+          docker push ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_VERSION }}
